--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smvp"
-version = "0.1.2"
+version = "0.1.3"
 description = "Send a formatted email from the command line"
 authors = [
     { name = "Peter Nardi", email = "geozeke@gmail.com" }
@@ -40,6 +40,7 @@ requires-python = ">=3.8"
 dependencies = [
     "ansi2html>=1.9.2",
     "bs4>=0.0.2",
+    "cssutils>=2.11.1",
     "lxml>=5.3.0",
     "tomli>=1.1.0 ; python_full_version < '3.11'",
 ]
