--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,16 @@ authors = [
 license = {file = "LICENSE"}
 readme = {file = "README.md", content-type = "text/markdown"}
 keywords = [
-	"smvp",
-	"you",
-	"send",
-	"mail",
-	"sendmail",
-	"logs",
-	"scripting",
 	"ansi",
+	"cron",
 	"html",
+	"logs",
+	"mail",
+	"mime",
+	"scripting",
+	"send",
+	"sendmail",
+	"smvp",
 ]
 classifiers = [
 	"Development Status :: 4 - Beta",
