--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smvp"
-version = "0.1.2"
+version = "0.2.0"
 description = "Send a formatted email from the command line"
 authors = [
     { name = "Peter Nardi", email = "geozeke@gmail.com" }
@@ -8,15 +8,16 @@ authors = [
 license = {file = "LICENSE"}
 readme = {file = "README.md", content-type = "text/markdown"}
 keywords = [
-	"smvp",
-	"you",
-	"send",
-	"mail",
-	"sendmail",
-	"logs",
-	"scripting",
 	"ansi",
+	"cron",
 	"html",
+	"logs",
+	"mail",
+	"mime",
+	"scripting",
+	"send",
+	"sendmail",
+	"smvp",
 ]
 classifiers = [
 	"Development Status :: 4 - Beta",
