--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smvp"
-version = "0.2.0"
+version = "0.2.3"
 description = "Send a formatted email from the command line"
 authors = [
     { name = "Peter Nardi", email = "geozeke@gmail.com" }
@@ -14,6 +14,7 @@ keywords = [
 	"logs",
 	"mail",
 	"mime",
+	"python",
 	"scripting",
 	"send",
 	"sendmail",
