--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,10 @@
 [project]
 name = "smvp"
-version = "0.2.6"
+version = "0.2.7"
 description = "Send a formatted email from the command line"
-authors = [
-    { name = "Peter Nardi", email = "geozeke@gmail.com" }
-]
-license = {file = "LICENSE"}
-readme = {file = "README.md", content-type = "text/markdown"}
+authors = [{ name = "Peter Nardi", email = "geozeke@gmail.com" }]
+license = { file = "LICENSE" }
+readme = { file = "README.md", content-type = "text/markdown" }
 keywords = [
 	"ansi",
 	"cron",
@@ -28,23 +26,23 @@ classifiers = [
 	"Operating System :: POSIX :: Linux",
 	"Operating System :: MacOS :: MacOS X",
 	"Topic :: Utilities",
-    "Topic :: System :: Logging",
-    "Topic :: Text Processing :: Markup :: HTML",
+	"Topic :: System :: Logging",
+	"Topic :: Text Processing :: Markup :: HTML",
 	"Programming Language :: Python :: 3",
 	"Programming Language :: Python :: 3.8",
 	"Programming Language :: Python :: 3.9",
 	"Programming Language :: Python :: 3.10",
 	"Programming Language :: Python :: 3.11",
 	"Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
+	"Programming Language :: Python :: 3.13",
 ]
 
 requires-python = ">=3.8"
 dependencies = [
-    "ansi2html>=1.9.2",
-    "bs4>=0.0.2",
-    "lxml>=5.3.0",
-    "tomli>=1.1.0 ; python_full_version < '3.11'",
+	"ansi2html>=1.9.2",
+	"bs4>=0.0.2",
+	"lxml>=5.3.0",
+	"tomli>=1.1.0 ; python_full_version < '3.11'",
 ]
 
 [project.urls]
@@ -52,11 +50,7 @@ dependencies = [
 "Bug Tracker" = "https://github.com/geozeke/smvp/issues"
 
 [dependency-groups]
-dev = [
-    "mypy>=1.14.1",
-    "ruff>=0.8.6",
-    "types-beautifulsoup4>=4.12.0.20241020",
-]
+dev = ["mypy>=1.14.1", "ruff>=0.8.6", "types-beautifulsoup4>=4.12.0.20241020"]
 [project.scripts]
 smvp = "smvp:main"
 
@@ -68,11 +62,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build]
-exclude = [
-    ".gitignore",
-    "Makefile",
-    "uv.lock",
-]
+exclude = [".gitignore", "Makefile", "uv.lock"]
 # Add pyproject.toml to the final package so the version number can be
 # extracted during runtime.
 [tool.hatch.build.targets.wheel.force-include]
