--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "smvp"
-version = "0.2.13"
+version = "0.2.14"
 description = "Send a formatted email from the command line"
 authors = [{ name = "Peter Nardi", email = "geozeke@gmail.com" }]
 license = { file = "LICENSE" }
@@ -57,15 +57,11 @@ smvp = "smvp:main"
 smvp = { workspace = true }
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv-build>=0.1.0"]
+build-backend = "uv_build"
 
-[tool.hatch.build]
+[tool.uv.build-backend]
 exclude = [".gitignore", "Makefile", "uv.lock"]
-# Add pyproject.toml to the final package so the version number can be
-# extracted during runtime.
-[tool.hatch.build.targets.wheel.force-include]
-"./pyproject.toml" = "smvp/pyproject.toml"
 
 [tool.ruff.lint.isort]
 force-single-line = true
